[gd_scene load_steps=9 format=3 uid="uid://dm3id5wa2s86y"]

[ext_resource type="Texture2D" uid="uid://cjg61awbfrku4" path="res://Assets/CaptainPortraits/Captain1.png" id="1_r7wxi"]
[ext_resource type="Script" path="res://Scripts/captain_stat_panel.gd" id="1_u3k42"]
[ext_resource type="FontFile" uid="uid://b0gnimhhmxlfd" path="res://Fonts/Play-Regular.ttf" id="2_xbipx"]
[ext_resource type="StyleBox" uid="uid://macpisymorbb" path="res://Theme/DarkBlueContShadow.tres" id="3_babv5"]
[ext_resource type="PackedScene" uid="uid://vb68ip76lkb" path="res://Scenes/Captain_Stat_Container.tscn" id="4_7yqdf"]
[ext_resource type="Theme" uid="uid://cgma68ateq86o" path="res://Theme/DarkBlueButton.tres" id="6_nmyfl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q877l"]
bg_color = Color(0.0515312, 0.0690738, 0.0920171, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.615304, 0.57196, 0.322451, 1)
border_blend = true
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6dwvn"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.0515312, 0.0690738, 0.0920171, 1)
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 401
border_color = Color(0.615304, 0.57196, 0.322451, 1)
border_blend = true
corner_detail = 1

[node name="CaptainPanel" type="PanelContainer"]
clip_contents = true
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -106.0
offset_right = 106.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_q877l")
script = ExtResource("1_u3k42")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6dwvn")

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
self_modulate = Color(1, 1, 1, 0.414)
show_behind_parent = true
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_r7wxi")
expand_mode = 1
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xbipx")
theme_override_styles/normal = ExtResource("3_babv5")
text = "George"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShipStatContainer" parent="VBoxContainer" instance=ExtResource("4_7yqdf")]
layout_mode = 2

[node name="ShipStatContainer2" parent="VBoxContainer" instance=ExtResource("4_7yqdf")]
layout_mode = 2

[node name="ShipStatContainer3" parent="VBoxContainer" instance=ExtResource("4_7yqdf")]
layout_mode = 2

[node name="ShipStatContainer4" parent="VBoxContainer" instance=ExtResource("4_7yqdf")]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer" groups=["Buttons"]]
layout_mode = 2
theme = ExtResource("6_nmyfl")
text = "Discharge  "

[connection signal="pressed" from="VBoxContainer/Button" to="." method="DischargeCaprain"]
